# NMM

./: pyproject.toml  spheres.ipynb
hw1/: spheres.ipynb
