[project]
name = "NMM_2026"
version = "0.1.1"
description = "Homework for NMM2026"
readme = "README.md"

requires-python = ">=3.12"
# license = { file = "LICENSE" }
classifiers = [
    "Development Status :: Class",
]


dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0,<1.15",
    "scikit-learn>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "fiona>=1.9.5",
    "epinterface>=1.0.5",
    "scythe-engine>=0.0.41",
    "ladybug-core>=0.44.29",
    "pydantic>=2.11,<3",
    "boto3>=1.40.49",
]

[project.optional-dependencies]
visualization = [
    "streamlit>=1.28.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "bokeh>=3.8.0",
    "rasterio>=1.3.9",
    "folium>=0.15.0",
]

cli = [
    "click>=8.1.7",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "ipython>=8.19.0",
    "ipykernel>=6.28.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "boto3-stubs[essential]>=1.35,<2.0",
    "jupyter",
    "ipywidgets",
    "ipykernel",
]

docs = [
    "mkdocs>=1.4,<2.0",
    "mkdocs-material>=9.2,<10.0",
    "mkdocstrings[python]>=0.26,<1.0",
    "mkdocstrings-python>=1.11,<2.0",
    "mkdocs-click>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


[tool.pyright]
include = ["hw1"]
typeCheckingMode = "standard"
ignore = ["tests/"]
venvPath = "."
venv = ".venv"


[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "D"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[project.urls]
Homepage = "https://github.com/daryaguettler/NMM2026"
Repository = "https://github.com/daryaguettler/NMM2026"
Issues = "https://github.com/daryaguettler/NMM2026"
